juste petit changement couleur

--- a/formulaire.html
+++ b/formulaire.html
@@ -15,7 +15,7 @@
             <input class="py-4 px-20 rounded-lg w-full mb-2 shadow-lg focus:outline-none "  type="text" placeholder="entrer prenom" required><br>
             <input class="py-4 px-20 rounded-lg w-full mb-2 shadow-lg focus:outline-none"  type="email" placeholder="entrer mail" required><br>
             <textarea class="py-4 px-20 rounded-lg w-full mb-2 shadow-lg focus:outline-none"  placeholder="nous ecrire" id=""></textarea><br>
-            <button class="bg-teal-500 px-4 py-3 rounded-lg font-semibold hover:bg-white" type="submit">Envoyer</button>
+            <button class="bg-red-500 px-4 py-3 rounded-lg font-semibold hover:bg-white" type="submit">Envoyer</button>
         
 
           </form>
